compiler/test-data/parser/types/errors/draft_on_intrinsic.frel
module test

backend InvalidDraftBackend {
    temp : draft String
}
